--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <!-- Các quyền yêu cầu -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,15 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewDemo"
+        android:theme="@style/Theme.ClothingShopDatabase"
         tools:targetApi="31">
         <activity
-            android:name=".ProjectMobile.Activity.DetailActivity"
-            android:exported="false" />
-        <!-- MainActivity khai báo là Launcher Activity -->
-        <activity
-            android:name=".ProjectMobile.Activity.MainActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ClothingShopDatabase">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
